--- a/rollup/main/default/classes/RollupTests.cls
+++ b/rollup/main/default/classes/RollupTests.cls
@@ -2519,6 +2519,37 @@ private class RollupTests {
     System.assertEquals(0, updatedOldAcc.AnnualRevenue, 'COUNT DISTINCT AFTER_UPDATE should be empty after reparenting');
   }
 
+  @isTest
+  static void shouldCorrectlyReparentForAverage() {
+    Account acc = [SELECT Id FROM Account];
+
+    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
+    Account oldAcc = new Account(AnnualRevenue = 50, Name = 'AnotherRollupTest');
+    insert oldAcc;
+
+    Rollup.defaultRollupLimit = null;
+
+    Opportunity opp = new Opportunity(Id = generateId(Opportunity.SObjectType), Amount = 50, AccountId = acc.Id);
+    Opportunity reparentedOpp = new Opportunity(Id = generateId(Opportunity.SObjectType), Amount = oldAcc.AnnualRevenue, AccountId = acc.Id);
+    DMLMock mock = loadMock(new List<Opportunity>{ opp, reparentedOpp });
+    Rollup.apexContext = TriggerOperation.AFTER_UPDATE;
+
+    Rollup.oldRecordsMap = new Map<Id, Opportunity>{
+      opp.Id => new Opportunity(AccountId = acc.Id, Amount = 0, Id = opp.Id),
+      reparentedOpp.Id => new Opportunity(AccountId = oldAcc.Id, Amount = oldAcc.AnnualRevenue, Id = reparentedOpp.Id)
+    };
+
+    Test.startTest();
+    Rollup.averageFromApex(Opportunity.Amount, Opportunity.AccountId, Account.Id, Account.AnnualRevenue, Account.SObjectType).runCalc();
+    Test.stopTest();
+
+    System.assertEquals(2, mock.Records.size(), 'Records should have been populated SUM AFTER_UPDATE, ' + mock.Records);
+    Account updatedAcc = (Account) mock.Records[0];
+    System.assertEquals(50, updatedAcc.AnnualRevenue, 'AVERAGE AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
+    Account updatedOldAcc = (Account) mock.Records[1];
+    System.assertEquals(null, updatedOldAcc.AnnualRevenue, 'AVERAGE AFTER_UPDATE should take the diff between the current amount and the pre-existing one');
+  }
+
   //** Helpers */
 
   private static DMLMock loadAccountIdMock(List<SObject> records) {
