Updated RollupEvaluator to properly allow multiple evaluators to be used, fixing issue where reparenting would not have been detected if a custom evaluator was supplied.

--- a/rollup/main/default/classes/Rollup.cls
+++ b/rollup/main/default/classes/Rollup.cls
@@ -1035,7 +1035,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         calcItems,
         oldCalcItems,
         batchRollup,
-        eval != null ? eval : RollupEvaluator.getEvaluator(rollupMetadata, oldCalcItems, sObjectType),
+        RollupEvaluator.getEvaluator(eval, rollupMetadata, oldCalcItems, sObjectType),
         rollupLimit.DeveloperName == LIMIT_INITIALIZED_HERE ? null : rollupLimit.Id,
         rollupInvokePoint,
         rollupMetadata
